[package]
name = "wapc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wapc_run"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wapr = { path = "../wapr" }
anyhow = "1.0.*"
futures = "0.3.*"
wee_alloc = "0.4.*"
wasm-bindgen = "0.2.*"

[profile.release]
opt-level = 2
lto = true
strip = true
panic = "abort"