[package]
name = "wap-wasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wap-rs-wasm"
path = "src/main.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "uds"
path = "examples/uds.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
wapr = { path = "../wapr" }
anyhow = "1.0.57"
futures = "0.3.*"
wee_alloc = "0.4.*"
wasm-bindgen = "0.2.*"
#wasmedge-sys = "0.5.0"
wasmtime = "0.36.0"
wasmtime-wasi = {version = "0.36", features = ["wasi-tokio", "tokio"] }
ntex = { version = "0.5", features = ["tokio", "rustls"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"