[package]
name = "wap-wasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wap-rs-wasm"
path = "src/main.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "echo2"
path = "examples/echo2.rs"

[[example]]
name = "uds"
path = "examples/uds.rs"


[dependencies]
log = "0.4"
env_logger = "0.10"
waspr = { path = "../waspr" }
anyhow = "1.0"
futures = "0.3"
mimalloc = { version = "0.1" }
wee_alloc = "0.4"
wasm-bindgen = "0.2"
# wasmedge-sys = "0.5"
wasmtime = "8.0"
wasmtime-wasi = {version = "8.0", features = ["wasi-tokio", "tokio"] }
ntex = { version = "0.6", features = ["tokio", "rustls"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"