[package]
name = "waspc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "waspc"
path = "src/main.rs"

[lib]
name = "libwaspc"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
rlsf = "0.2"
rpmalloc = "0.2.2"
futures = "0.3"
arrow = "38.0.0"
#wasm-bindgen = "0.2.*"

[profile.release]
opt-level = 2
lto = true
strip = true
panic = "abort"