[package]
name = "wap"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wapc"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
futures = "0.3.21"
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.80"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"