[package]
name = "wap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wapc"
path = "src/main.rs"

[[bin]]
name = "wasm"
path = "examples/wasm.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.57"
futures = "0.3.*"
wee_alloc = "0.4.*"
wasm-bindgen = "0.2.*"
#wasmedge-sys = "0.5.0"
wasmtime = "0.36.0"
wasmtime-wasi = {version = "0.36.0", features = ["wasi-tokio", "tokio"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"