[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.1", features = ["csr", "nightly"] }
rlsf = "0.2"
web-sys = "0.3"
wasm-bindgen = "0.2"
proc-macro2 = "1.0.60"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"